@@ -1,0 +1,123 @@
+## To understand ticks. 1 second is relevent to 20 ticks! So a second and a half (1.5s) is 30 ticks!
+## Fadein, stay, fadeout are the 3 arguments. You can edit how long it takes to fadein, fadeout etc.
+## You can also put the fade numbers to 0, and then the popup's will be instant!
+## Get creative!
+## Global Popups duplicate rules are applied just like global Messages, same situation with private popups
+## and private messages.
+global_popups:
+    ## Enable or Disable the Popups!
+    enabled:
+        ## Show the pop ups on the minute reminders!
+        minutes: true
+        ## Show the pop ups on the last seconds of a server restart!
+        seconds: true
+        ## Show the pop ups when type /autore time
+        ## [Duplicated in Global_Messages]
+        status:
+            start: true
+            pause: true
+        ## Show the pop ups when the server time has been changed!
+        ## [Duplicated in Global_Messages]
+        change: true
+        ## Show the Maxplayers pop ups
+        max_players:
+            ## The pop up broadcasts when too many players are online on restart!
+            alert: true
+            ## This pop up appears when the amount of players requirement is met!
+            pre_shutdown: true
+        ## Shows the popup before restart
+        shutdown: true
+    ## This section is for the customization of the popup messages!
+    messages:
+        minutes: ## %m - minutes
+            title:
+                text: '&cServer Restarting In'
+                fadein: 20
+                stay: 40
+                fadeout: 20
+            subtitle:
+                text: '&f%m &cMinutes!'
+                fadein: 20
+                stay: 40
+                fadeout: 20
+        seconds: ## %s - seconds
+            title:
+                text: '&cServer Restarting In'
+                fadein: 5
+                stay: 20
+                fadeout: 5
+            subtitle:
+                text: '&f%s &cSeconds!'
+                fadein: 5
+                stay: 10
+                fadeout: 5
+        status: ## There are no tags for this section
+            start:
+                title:
+                    text: '&cAutoRestart has started!'
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+                subtitle:
+                    text: ''
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+            pause:
+                title:
+                    text: '&cAutoRestart has been paused!'
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+                subtitle:
+                    text: ''
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+        change: ## %h - hours, %m - minutes, %s - seconds
+            title:
+                text: '&cServer Restarting In'
+                fadein: 20
+                stay: 40
+                fadeout: 20
+            subtitle:
+                text: '&f%h&cH &f%m&cM &f%s&cS!'
+                fadein: 20
+                stay: 40
+                fadeout: 20
+        max_players:
+            alert: ## %a - amount
+                title:
+                    text: '&bToo many players online for restart.'
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+                subtitle:
+                    text: 'Max &f%a&b amount of players allowed for a restart.'
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+            pre_shutdown: ## %d - delay
+                title:
+                    text: '&aServer now restarting in &f%d&a seconds!'
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+                subtitle:
+                    text: ''
+                    fadein: 20
+                    stay: 40
+                    fadeout: 20
+        shutdown:
+            title:
+                text: '&cServer is now'
+                fadein: 20
+                stay: 80
+                fadeout: 20
+            subtitle:
+                text: '&cRestarting!'
+                fadein: 20
+                stay: 80
+                fadeout: 20
+## DO NOT TOUCH!!
+version: 1
