@@ -2,3 +2,4 @@
 - Show latest update when update is found.
 - Added update messenger in chat
 - Added plugin metrics
+- Separated configuration files
